# Bazecor-rs

./: .gitignore  Cargo.toml
.run/: Bazecor-Tauri.run.xml  Bazecor.run.xml  Flasher.run.xml
binaries/bazecor/: package-lock.json  package.json
binaries/bazecor-tauri/src-tauri/: Cargo.toml
binaries/bazecor/src-tauri/: Cargo.toml  tauri.conf.json
binaries/flasher/: Cargo.toml
binaries/flasher-standalone/: Cargo.toml
binaries/flasher-standalone/src/: main.rs  prompts.rs
binaries/flasher_standalone/: Cargo.toml
binaries/flasher_standalone/src/: logger.rs  main.rs  prompts.rs
libraries/api/: Cargo.toml
libraries/api/src/: devices.rs  downloader.rs  firmware_downloader.rs  flash.rs  hardware.rs  hardware_virtual.rs  lib.rs
libraries/api/src/flash/: mod.rs
libraries/api/src/flash/devices/: mod.rs
libraries/api/src/flash/devices/defy/: mod.rs  nrf52833_flasher.rs  side_flasher.rs
libraries/api/src/flash/types/: mod.rs
libraries/api/src/hardware/: mod.rs
libraries/api/src/hardware/types/: hardware_physical.rs  hardware_virtual.rs
libraries/focus/: Cargo.toml  README.md
libraries/focus/src/: api.rs  color.rs  configuration.rs  enums.rs  helpers.rs  keyboards.rs  lib.rs  prelude.rs  settings.rs
libraries/focus/src/hardware/: mod.rs
libraries/focus/src/hardware/types/: hardware_physical.rs  hardware_virtual.rs  mod.rs
libraries/proc_macros/: Cargo.toml
libraries/proc_macros/src/: lib.rs
