[package]
name = "flasher-standalone"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Wilding <mbwilding@gmail.com>"]

[dependencies]
anyhow = "1.0"
api = { path = "../../libraries/api" }
inquire = "0.6"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
