[package]
name = "flasher_standalone"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Wilding <mbwilding@gmail.com>"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
dygma_api = { path = "../../libraries/api" }
inquire = "0.6"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# TODO: Remove after testing
dygma_focus = { path = "../../libraries/focus" }
