[package]
name = "dygma_focus"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Wilding <mbwilding@gmail.com>"]
description = "Dygma Focus API, for use with Dygma keyboards"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/mbwilding/Bazecor-rs"

[dependencies]
anyhow = "1.0"
bazecor_proc_macros = { path = "../proc_macros" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-serial = "5.4"
log = "0.4"
