[package]
name = "bazecor_proc_macros"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Wilding <mbwilding@gmail.com>"]
description = "Dygma Bazecor, proc macros"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mbwilding/Bazecor-rs"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
